# libervia-ia

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  auto_fix_portable.py  pyproject.toml  requirements-dev.txt  requirements.txt  script001.sh  script002.sh  script003.sh
configs/model/: core_2b.yaml
scripts/: chat_demo.py  example_usage.py  memory_safe_test.py  quick_test.py  simple_demo.py  test_model.py
